<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FirstActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity_first_button_go_to_4"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_first_button_go_to_4_label"
        app:layout_constraintBottom_toTopOf="@id/activity_first_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_first_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_first_title"
        app:layout_constraintBottom_toTopOf="@id/activity_first_button_go_to_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_first_button_go_to_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity_first_button_go_to_2"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_first_button_go_to_2_label"
        app:layout_constraintBottom_toTopOf="@id/activity_first_button_go_to_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_first_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity_first_button_go_to_6"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_first_button_go_to_6_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_first_button_go_to_2" />

</androidx.constraintlayout.widget.ConstraintLayout>