<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ThirdActivity">

    <Button
        android:id="@+id/activity_third_button_go_to_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_third_button_go_to_5_label"
        app:layout_constraintBottom_toTopOf="@id/activity_third_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_third_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_third_title"
        app:layout_constraintBottom_toTopOf="@id/activity_third_button_go_to_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_third_button_go_to_5" />

    <Button
        android:id="@+id/activity_third_button_go_to_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_third_button_go_to_1_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_third_title" />

</androidx.constraintlayout.widget.ConstraintLayout>