<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FifthActivity">

    <TextView
        android:id="@+id/activity_fifth_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_fifth_title"
        app:layout_constraintBottom_toTopOf="@+id/activity_fifth_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activity_fifth_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_fifth_edit_text_margin"
        android:hint="@string/activity_fifth_edit_text_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/activity_fifth_save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_fifth_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity_fifth_save_button"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_fifth_save_button_label"
        app:layout_constraintBottom_toTopOf="@id/activity_fifth_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_fifth_edit_text" />

    <TextView
        android:id="@+id/activity_fifth_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/activity_fifth_deliver_result_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_fifth_save_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity_fifth_deliver_result_button"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_fifth_deliver_result_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_fifth_text_view" />


</androidx.constraintlayout.widget.ConstraintLayout>